--- a/1st-semester.html
+++ b/1st-semester.html
@@ -24,7 +24,7 @@
 
 		<div class="box-one-modal modal-screen hide">
 
-			<div class="modal-title"> <h2> HELLO GECCI</h2></div>
+			<div class="modal-title"> <h2>SKILLS MODAL</h2></div>
 
 		</div>
 
@@ -38,7 +38,7 @@
 
 	<div class="box-two-modal modal-screen hide">
 
-			<div class="modal-title"> <h2> HELLO GECCI 2222222222222222222222</h2></div>
+			<div class="modal-title"> <h2> KNOWLEDGE MODAL</h2></div>
 
 		</div>
 
@@ -52,7 +52,7 @@
 
 	<div class="box-three-modal modal-screen hide">
 
-		<div class="modal-title"> <h2> HELLO GECCI 333333333333333333</h2></div>
+		<div class="modal-title"> <h2> COMPETENCIES MODAL</h2></div>
 
 		</div>
 
@@ -66,7 +66,7 @@
 
 	<div class="box-four-modal modal-screen hide">
 
-		<div class="modal-title"> <h2> HELLO GECCI 44444444444444</h2></div>
+		<div class="modal-title"> <h2>DIGITAL UI MODAL</h2></div>
 
 		</div>
 
@@ -81,7 +81,7 @@
 
 	<div class="box-five-modal modal-screen hide">
 
-		<div class="modal-title"> <h2> HELLO GECCI 55555555</h2></div>
+		<div class="modal-title"> <h2> DIGITAL CONTENT MODAL</h2></div>
 
 		</div>
 
@@ -96,8 +96,7 @@
 
 	<div class="box-six-modal modal-screen hide">
 
-		<div class="modal-title"> <h2> HELLO GECCI 666666666666</h2></div>
-
+		<div class="modal-title"> <h2> EXAM MODAL</h2></div>
 		</div>
 </div>
 <script src="script.js"></script>
