--- a/2nd-semester.html
+++ b/2nd-semester.html
@@ -20,7 +20,9 @@
 	     <div class="more"> <a href="">+</a></div>
 	     </div>
 	    </div>
-
+			<div class="box-one-modal modal-screen hide">
+				<div class="modal-title"> <h2> SKILLS MODAL</h2></div>
+			</div>
 	<div class="box-two box">
     <div class="item-one">
     <div class="numbers"> 02</div>
@@ -28,7 +30,9 @@
 	    <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
-
+	<div class="box-two-modal modal-screen hide">
+		<div class="modal-title"> <h2> KNOWLEDGE MODAL</h2></div>
+	</div>
 	<div class="box-three box">
        <div class="item-one">
        <div class="numbers"> 03</div>
@@ -36,7 +40,9 @@
 	     <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
-
+	<div class="box-three-modal modal-screen hide">
+		<div class="modal-title"> <h2> COMPETENCIES MODAL</h2></div>
+	</div>
 	<div class="box-four box">
         <div class="item-one">
         <div class="numbers"> 04</div>
@@ -44,7 +50,9 @@
 	    <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
-
+	<div class="box-four-modal modal-screen hide">
+		<div class="modal-title"> <h2> DIGITAL UI MODAL</h2></div>
+	</div>
 	<div class="box-five box">
       <div class="item-one">
       <div class="numbers"> 05</div>
@@ -52,7 +60,9 @@
          <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
-
+	<div class="box-five-modal modal-screen hide">
+		<div class="modal-title"> <h2> DIGITAL CONTENT MODAL</h2></div>
+	</div>
 	<div class="box-six box">
     <div class="item-one">
     <div class="numbers"> 06</div>
@@ -60,18 +70,10 @@
 	     <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
-
-
-
+	<div class="box-six-modal modal-screen hide">
+		<div class="modal-title"> <h2> EXAM MODAL</h2></div>
+	</div>
 </div>
-
-
-
-
-
-
-
-
 <script src="script.js"></script>
 </body>
 </html>
