--- a/4th-semester.html
+++ b/4th-semester.html
@@ -20,6 +20,11 @@
 	     <div class="more"> <a href="">+</a></div>
         </div>
 	    </div>
+			<div class="box-one-modal modal-screen hide">
+
+				<div class="modal-title"> <h2>SKILLS MODAL</h2></div>
+
+				</div>
 
 	<div class="box-two box">
     <div class="item-one">
@@ -28,6 +33,11 @@
 	    <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
+	<div class="box-two-modal modal-screen hide">
+
+		<div class="modal-title"> <h2> KNOWLEDGE MODAL</h2></div>
+
+		</div>
 
 	<div class="box-three box">
    <div class="item-one">
@@ -36,6 +46,11 @@
 	    <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
+	<div class="box-three-modal modal-screen hide">
+
+		<div class="modal-title"> <h2> COMPETENCIES MODAL</h2></div>
+
+		</div>
 
 	<div class="box-four box">
     <div class="item-one">
@@ -44,6 +59,11 @@
 	    <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
+	<div class="box-four-modal modal-screen hide">
+
+		<div class="modal-title"> <h2>INTERNSHIP MODAL</h2></div>
+
+		</div>
 
 	<div class="box-five box">
     <div class="item-one">
@@ -52,6 +72,11 @@
          <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
+	<div class="box-five-modal modal-screen hide">
+
+		<div class="modal-title"> <h2>EXAM MODAL</h2></div>
+
+		</div>
 
 	<div class="box-six box">
     <div class="item-one">
@@ -60,19 +85,12 @@
 	     <div class="more"> <a href="">+</a></div>
         </div>
 	</div>
+	<div class="box-six-modal modal-screen hide">
 
+		<div class="modal-title"> <h2>FINAL PROJECT MODAL</h2></div>
 
-
+		</div>
 </div>
-
-
-
-
-
-
-
-
 <script src="script.js"></script>
 </body>
 </html>
-
