--- a/3rd-semester.html
+++ b/3rd-semester.html
@@ -11,7 +11,10 @@
 <body>
 
 <div class="main-boxes">
-<h1 class="semester-title"> 3rd semester</h1>
+
+	<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum.html#slideshow" class="semester-title">3rd semester</a>
+
     <div class="box-one-third box">
     <div class="item-one">
         <div class="numbers"> 01</div>
