--- a/4th-semester.html
+++ b/4th-semester.html
@@ -11,7 +11,9 @@
 <body>
 
 <div class="main-boxes">
-<h1 class="semester-title"> 4th semester</h1>
+
+	<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum.html#slideshow" class="semester-title">4th semester</a>
 
     <div class="box-one box">
     <div class="item-one">
