--- a/curriculum.html
+++ b/curriculum.html
@@ -16,47 +16,52 @@
 	<h1 class="Curriculum"> Curriculum</h1>
 	<img class="brice" src="assets/Brice-KEA.jpg" alt="Brice-Kea" >
    <img class="text-brice" src="assets/text.svg" alt="text-brice"  >
-    <div class="scroll">scroll</div>
+    <div class="scroll">&#8595;</div>
 
 
 </div>
 
 
-<div class="slideshow-page">
+<div class="slideshow-page" id="slideshow">
 
 	<div class="slideshow-inner">
 
-		<button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+		<button class="prev slideshow-button" onclick="plusSlides(-1)">&#10094;</button>
 
 		<div class="slideshow-main">
 
 			<div class="mySlides first-semester">
-                <h2  class="slideshow-title " > <a href="1st-semester.html">First <br>Semester</a></h2>
+             <span class="slide-number">1/5<br></span>
+				<h2  class="slideshow-title " > <a href="1st-semester.html">First <br>Semester</a></h2>
 		<div class="slideshow-rectangle rectangle-1"></div>
 		</div>
 
 			<div class="mySlides second-semester">
+				<span class="slide-number">2/5<br></span>
 		<h2 class="slideshow-title"><a href="2nd-semester.html">Second <br>Semester</a></h2>
 		<div class="slideshow-rectangle rectangle-2"></div>
 		</div>
 
 			<div class="mySlides third-semester">
+				<span class="slide-number">3/5<br></span>
 		<h2 class="slideshow-title"> <a href="3rd-semester.html">Third <br>Semester</a></h2>
 		<div class="slideshow-rectangle rectangle-3"></div>
 		</div>
 
 			<div class="mySlides fourth-semester">
+				<span class="slide-number">4/5<br></span>
 		<h2 class="slideshow-title"><a href="4th-semester.html">Fourth <br>Semester</a></h2>
 		<div class="slideshow-rectangle rectangle-4"></div>
 		</div>
 
 			<div class="mySlides faq">
+				<span class="slide-number">5/5<br></span>
                 <h2 class="slideshow-title"><a >FAQ</a></h2>
 		<div class="slideshow-rectangle rectangle-5"></div>
 		</div>
 
 		</div>
-		<button class="next" onclick="plusSlides(1)">&#10095;</button>
+		<button class="next slideshow-button" onclick="plusSlides(1)">&#10095;</button>
 
 
 	 </div>
