--- a/2nd-semester.html
+++ b/2nd-semester.html
@@ -11,8 +11,9 @@
 <body>
 
 <div class="main-boxes">
-<h1 class="semester-title"> 2nd semester</h1>
-
+<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum.html#slideshow" class="semester-title">2nd semester</a>
+	<!--
     <div class="box-one box">
     <div class="item-one">
         <div class="numbers"> 01</div>
@@ -22,6 +23,7 @@
 	    </div>
 			<div class="box-one-modal modal-screen hide">
 				<div class="modal-title"> <h2> SKILLS MODAL</h2></div>
+				<div class="modal-text"><p>BLABLABLA22222222</p></div>
 			</div>
 	<div class="box-two box">
     <div class="item-one">
@@ -72,8 +74,151 @@
 	</div>
 	<div class="box-six-modal modal-screen hide">
 		<div class="modal-title"> <h2> EXAM MODAL</h2></div>
+
 	</div>
+-->
+
+	  <div class="box-one box" >
+       <div class="item-one">
+       <div class="numbers"> 01</div>
+	    <div class="category-menu">Skills</div>
+	     <div class="more"> <p class="more-button">+<p></div>
+	     </div>
+	    </div>
+
+
+		<div class="box-one-modal modal-screen hide">
+
+			<div class="modal-title"> <h2>SKILLS</h2></div>
+
+				<p class="modal-subtitle">The graduate has acquired the skills needed to:</p>
+
+      	<p class="modal-text">apply key methods and tools relevant to the analysis, ideation, design, planning, realisation
+        and management of digital media tasks, and apply skills of relevance to employment within
+        digital media</p>
+
+				<p class="modal-text">assess practice-oriented issues within digital media and propose and select possible solutions
+				<p class="modal-text">communicate practice-oriented issues and possible solutions within digital media to partners
+				and users.</p>
+
+				<p class="modal-text close-text">Close</p>
+
+		</div>
+
+	<div class="box-two  box">
+    <div class="item-one">
+    <div class="numbers"> 02</div>
+	    <div class="category-menu">Knowledge</div>
+	    <div class="more"> <p class="more-button">+</p></div>
+	    </div>
+	</div>
+
+	<div class="box-two-modal modal-screen hide">
+
+			<div class="modal-title"> <h2> KNOWLEDGE </h2></div>
+
+				<p class="modal-subtitle">The graduate has acquired:</p>
+				<p class="modal-text"> knowledge of professional practices within the field as well as key applied theories and
+				methods of relevance to the analysis, ideation, design, planning, realisation and management
+				of digital media tasks as well as the implementation, administration and maintenance of digital
+				media productions</p>
+				<p class="modal-text">an understanding of practices and key theories and methods as well as an understanding of
+					the use of theories and methods in the digital media profession.</p>
+
+				<p class="modal-text close-text">Close</p>
+
+
+
+		</div>
+
+	<div class="box-three box">
+       <div class="item-one">
+       <div class="numbers"> 03</div>
+	   <div class="category-menu"> Competencies</div>
+	    <div class="more"> <p class="more-button">+</p></div>
+	    </div>
+	</div>
+
+	<div class="box-three-modal modal-screen hide">
+
+		<div class="modal-title"> <h2> COMPETENCIES</h2></div>
+		<p class="modal-subtitle">The graduate has acquired the competencies needed to:</p>
+		<p class="modal-text">engage in development-oriented activities, including undertaking the analysis, ideation, design
+				and planning as well as realisation and management of digital media tasks, and be innovative
+				in tailoring digital media solutions to commercial conditions</p>
+		<p class="modal-text">in a structured context acquire new knowledge, skills and competencies within digital media</p>
+		<p class="modal-text">participate in disciplinary and interdisciplinary cooperation within digital media in connection
+			with implementation, administration and maintenance, taking a professional approach. </p>
+
+		<p class="modal-text close-text">Close</p>
+
+		</div>
+
+	<div class="box-four box">
+    <div class="item-one">
+    <div class="numbers"> 04</div>
+	    <div class="category-menu">Digital UI 2</div>
+	    <div class="more"> <p class="more-button">+</p></div>
+	    </div>
+	</div>
+
+	<div class="box-four-modal modal-screen hide">
+
+		<div class="modal-title"> <h2>DIGITAL UI 2</h2></div>
+
+		<p class="modal-text">The programme element covers the design and programming of complex digital solutions with a
+special focus on user interfaces.</p><p class="modal-text"> As part of the programme element, key methods for testing the user
+experience of digital solutions are applied. </p> <p class="modal-text">Solutions are designed and programmed in teams applying
+technologies and development methods that support teamwork.</p>
+
+
+		<p class="modal-text close-text">Close</p>
+
+		</div>
+
+	<div class="box-five box">
+         <div class="item-one">
+         <div class="numbers"> 05</div>
+	    <div class="category-menu">Digital Content 2</div>
+         <div class="more"> <p class="more-button">+</p></div>
+         </div>
+	</div>
+
+
+	<div class="box-five-modal modal-screen hide">
+
+		<div class="modal-title"> <h2> DIGITAL CONTENT 2</h2></div>
+
+		<p class="modal-text">The programme element covers the design and programming of complex digital content solutions
+for multiple types of media.</p> <p class="modal-text">The programme element focuses on multiple types of digital content,
+multiple types of media and related production methods.</p><p class="modal-text"> In the production of content, technologies
+are applied to manage and present content, and the communication of data forms part of the production
+of digital content.</p>
+		<p class="modal-text close-text">Close</p>
+
+
+	</div>
+
+	<div class="box-six box">
+     <div class="item-one">
+     <div class="numbers"> 06</div>
+	    <div class="category-menu">Exam</div>
+	     <div class="more"> <p class="more-button">+</p></div>
+	     </div>
+	</div>
+
+
+	<div class="box-six-modal modal-screen hide">
+
+		<div class="modal-title"> <h2> EXAM </h2></div>
+		<p class="modal-subtitle"> Portfolio exam</p>
+		<p class="modal-text"> At the end of semester exam students have to present the knowledge they acquired during the whole semester on a exam project executed in teams.</p>
+		<p class="modal-ects">30 ECTS </p>
+
+		<p class="modal-text close-text">Close</p>
 </div>
+	</div>
+
 <script src="script.js"></script>
 </body>
 </html>
