--- a/1st-semester.html
+++ b/1st-semester.html
@@ -10,8 +10,8 @@
 
 <body>
 <div class="main-boxes">
-<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum.html#slideshow" class="semester-title">1st semester</a>
+<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum_in.html#slideshow" class="semester-title">1st semester</a>
 
     <div class="box-one box" >
        <div class="item-one">
