--- a/2nd-semester.html
+++ b/2nd-semester.html
@@ -11,8 +11,8 @@
 <body>
 
 <div class="main-boxes">
-<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum.html#slideshow" class="semester-title">2nd semester</a>
+<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum_in.html#slideshow" class="semester-title">2nd semester</a>
 	<!--
     <div class="box-one box">
     <div class="item-one">
