--- a/3rd-semester.html
+++ b/3rd-semester.html
@@ -12,8 +12,8 @@
 
 <div class="main-boxes">
 
-	<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum.html#slideshow" class="semester-title">3rd semester</a>
+	<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum_in.html#slideshow" class="semester-title">3rd semester</a>
 
     <div class="box-one-third box">
     <div class="item-one">
