--- a/curriculum_in.html
+++ b/curriculum_in.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-
+<!--
 	<div class="preload-screen">
 		<h1 class="preload-text">Copenhagen School of Design and Technology<br>Multimedia Design and Communication <br>Curriculum</h1>
 		<img class="preload-brice" src="assets/Brice-Kea.png" alt="Brice-Kea" >
 		<img class="preload-bar" src="assets/loadbar.gif">
 	<div class="preload-logo">
 	<!--	<a href="www.kea.dk/en" class="kea-link"><img src="assets/kea_EN_logo_BLK.jpg" alt="kea logo"></a>
-	-->
+
 
 		</div>
 
@@ -26,7 +26,7 @@
 
 		</div>
 
-	</div>
+	</div>-->
 
 <div class="intro-page">
 	<h1 class="KEA">Copenhagen School of Design and Technology<br> Multimedia Design <br> Curriculum </h1>
@@ -138,7 +138,7 @@ function showSlides(n) {
 }
 
 
-
+/*
 
 function movePreload(){
 	var preLoadLeft = document.querySelector(".preload-left");
@@ -184,6 +184,7 @@ function hidePreloadTimeout(){
 }
 
 hidePreloadTimeout();
+*/
 
 </script>
 </body>
