--- a/4th-semester.html
+++ b/4th-semester.html
@@ -12,8 +12,8 @@
 
 <div class="main-boxes">
 
-	<a href="curriculum.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum.html#slideshow" class="semester-title">4th semester</a>
+	<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum_in.html#slideshow" class="semester-title">4th semester</a>
 
     <div class="box-one box">
     <div class="item-one">
