--- a/curriculum_in.html
+++ b/curriculum_in.html
@@ -30,7 +30,7 @@
 
 <div class="intro-page">
 	<h1 class="KEA">Copenhagen School of Design and Technology<br> Multimedia Design <br> Curriculum </h1>
-
+<img class="main-chart" src="assets/MMD_EN.png" alt="mmd chart">
 	<!--<img class="brice" src="assets/Brice-Kea.png" alt="Brice-Kea" >-->
 	<h2 class="overview-title">General Overview <br>of the programme</h2>
     <div class="scroll">&#8595;</div>
