--- a/1st-semester.html
+++ b/1st-semester.html
@@ -9,157 +9,58 @@
 </head>
 
 <body>
-<div class="main-boxes">
+	<style>
+
+</style>
+	<a href="curriculum_in.html" class="page-navigation-arrow">&#10094;</a>
+<div class="page-navigation">
 <a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum_in.html#slideshow" class="semester-title">1st semester</a>
-
-    <div class="box-one box" >
-       <div class="item-one">
-       <div class="numbers"> 01</div>
-	    <div class="category-menu">Skills</div>
-	     <div class="more"> <p class="more-button">+<p></div>
-	     </div>
-	    </div>
-
-
-		<div class="box-one-modal modal-screen hide">
-
-			<div class="modal-title"> <h2>SKILLS</h2></div>
-
-				<p class="modal-subtitle">The graduate has acquired the skills needed to:</p>
-
-      	<p class="modal-text">apply key methods and tools relevant to the analysis, ideation, design, planning, realisation
-        and management of digital media tasks, and apply skills of relevance to employment within
-        digital media</p>
-
-				<p class="modal-text">assess practice-oriented issues within digital media and propose and select possible solutions
-				<p class="modal-text">communicate practice-oriented issues and possible solutions within digital media to partners
-				and users.</p>
-
-				<p class="modal-text close-text">Close</p>
-
-		</div>
-
-	<div class="box-two  box">
-    <div class="item-one">
-    <div class="numbers"> 02</div>
-	    <div class="category-menu">Knowledge</div>
-	    <div class="more"> <p class="more-button">+</p></div>
-	    </div>
-	</div>
-
-	<div class="box-two-modal modal-screen hide">
-
-			<div class="modal-title"> <h2> KNOWLEDGE </h2></div>
-
-				<p class="modal-subtitle">The graduate has acquired:</p>
-				<p class="modal-text"> knowledge of professional practices within the field as well as key applied theories and
-				methods of relevance to the analysis, ideation, design, planning, realisation and management
-				of digital media tasks as well as the implementation, administration and maintenance of digital
-				media productions</p>
-				<p class="modal-text">an understanding of practices and key theories and methods as well as an understanding of
-					the use of theories and methods in the digital media profession.</p>
-
-				<p class="modal-text close-text">Close</p>
-
-
-
-		</div>
-
-	<div class="box-three box">
-       <div class="item-one">
-       <div class="numbers"> 03</div>
-	   <div class="category-menu"> Competencies</div>
-	    <div class="more"> <p class="more-button">+</p></div>
-	    </div>
-	</div>
-
-	<div class="box-three-modal modal-screen hide">
-
-		<div class="modal-title"> <h2> COMPETENCIES</h2></div>
-		<p class="modal-subtitle">The graduate has acquired the competencies needed to:</p>
-		<p class="modal-text">engage in development-oriented activities, including undertaking the analysis, ideation, design
-				and planning as well as realisation and management of digital media tasks, and be innovative
-				in tailoring digital media solutions to commercial conditions</p>
-		<p class="modal-text">in a structured context acquire new knowledge, skills and competencies within digital media</p>
-		<p class="modal-text">participate in disciplinary and interdisciplinary cooperation within digital media in connection
-			with implementation, administration and maintenance, taking a professional approach. </p>
-
-		<p class="modal-text close-text">Close</p>
-
-		</div>
-
-	<div class="box-four box">
-    <div class="item-one">
-    <div class="numbers"> 04</div>
-	    <div class="category-menu">Digital UI 1</div>
-	    <div class="more"> <p class="more-button">+</p></div>
-	    </div>
-	</div>
-
-	<div class="box-four-modal modal-screen hide">
-
-		<div class="modal-title"> <h2>DIGITAL UI 1</h2></div>
-
-		<p class="modal-text">The programme element covers basic principles for the design and programming of digital solutions,
-		with a particular focus on the design and structuring of the user interface.</p>
-
-		<p class="modal-text">The programme element includes user-centred methods for the testing of design and solution.</p>
-
-		<p class="modal-text">Solutions are designed and programmed using selected development methods, and an introduction
-		is given to technologies that form part of the design and programming of user interfaces. </p>
-
-
-		<p class="modal-text close-text">Close</p>
-
-		</div>
-
-	<div class="box-five box">
-         <div class="item-one">
-         <div class="numbers"> 05</div>
-	    <div class="category-menu">Digital Content 1</div>
-         <div class="more"> <p class="more-button">+</p></div>
-         </div>
-	</div>
-
-
-	<div class="box-five-modal modal-screen hide">
-
-		<div class="modal-title"> <h2> DIGITAL CONTENT 1</h2></div>
-
-		<p class="modal-text">The programme element covers the design, programming and production of simple digital content
-		solutions for selected media platforms.</p>
-		<p class="modal-text">The programme element focuses on the production of simple
-		content for media platforms based on data-driven user understanding.</p>
-		<p class="modal-text">Solutions are designed, programmed
-		and produced on the basis of a content and business strategy, and an introduction is given
-		to key technologies and business models of relevance to the design and programming of digital content.</p>
-
-		<p class="modal-text close-text">Close</p>
-
-
-	</div>
-
-	<div class="box-six box">
-     <div class="item-one">
-     <div class="numbers"> 06</div>
-	    <div class="category-menu">Exam</div>
-	     <div class="more"> <p class="more-button">+</p></div>
-	     </div>
-	</div>
-
-
-	<div class="box-six-modal modal-screen hide">
-
-		<div class="modal-title"> <h2> EXAM </h2></div>
-		<p class="modal-subtitle"> Portfolio exam</p>
-		<p class="modal-text"> After the first semester exam students have to present the knowledge they acquired during the whole semester.</p>
-		<p class="modal-ects">30 ECTS </p>
-
-		<p class="modal-text close-text">Close</p>
-
-		</div>
+<a href="curriculum_in.html#slideshow" class="semester-title"><br>1st semester</a>
 </div>
+
+	<div class="panels">
+    <div class="panel panel1" onclick="hidePanelText();">
+     <div class="panel-box"><p class="numbers">1</p>
+	    <p class="category-menu">Skills</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-1 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel2" onclick="hidePanelText2();">
+     	<div class="panel-box"><p class="numbers">2</p>
+	    <p class="category-menu">Knowledge</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-2 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel3" onclick="hidePanelText3();">
+      <div class="panel-box"><p class="numbers">3</p>
+	    <p class="category-menu">Competences</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-3 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel4" onclick="hidePanelText4();">
+     <div class="panel-box"><p class="numbers">4</p>
+	    <p class="category-menu">Digital UI 1 </p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-4 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel5" onclick="hidePanelText5();">
+      <div class="panel-box"><p class="numbers">5</p>
+	    <p class="category-menu">Digital Content 1 </p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-5 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+		 <div class="panel panel6" onclick="hidePanelText6();">
+      <div class="panel-box"><p class="numbers">6</p>
+	    <p class="category-menu">Exam</p>
+	    <p class="more-button">+</p>	</div>
+			 <p class="panel-text paneltext-6 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+  </div>
+
 <script src="script.js"></script>
+
+
+
+
 </body>
 </html>
