--- a/4th-semester.html
+++ b/4th-semester.html
@@ -10,89 +10,50 @@
 
 <body>
 
-<div class="main-boxes">
-
-	<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
-<a href="curriculum_in.html#slideshow" class="semester-title">4th semester</a>
-
-    <div class="box-one box">
-    <div class="item-one">
-         <div class="numbers"> 01</div>
-	    <div class="category-menu">Skills</div>
-	     <div class="more"> <a href="">+</a></div>
-        </div>
-	    </div>
-			<div class="box-one-modal modal-screen hide">
-
-				<div class="modal-title"> <h2>SKILLS MODAL</h2></div>
-
-				</div>
-
-	<div class="box-two box">
-    <div class="item-one">
-        <div class="numbers"> 02</div>
-	    <div class="category-menu">Knowledge</div>
-	    <div class="more"> <a href="">+</a></div>
-        </div>
-	</div>
-	<div class="box-two-modal modal-screen hide">
-
-		<div class="modal-title"> <h2> KNOWLEDGE MODAL</h2></div>
-
-		</div>
-
-	<div class="box-three box">
-   <div class="item-one">
-       <div class="numbers"> 03</div>
-	   <div class="category-menu"> Competencies</div>
-	    <div class="more"> <a href="">+</a></div>
-        </div>
-	</div>
-	<div class="box-three-modal modal-screen hide">
-
-		<div class="modal-title"> <h2> COMPETENCIES MODAL</h2></div>
-
-		</div>
-
-	<div class="box-four box">
-    <div class="item-one">
-        <div class="numbers"> 04</div>
-	    <div class="category-menu">Internship</div>
-	    <div class="more"> <a href="">+</a></div>
-        </div>
-	</div>
-	<div class="box-four-modal modal-screen hide">
-
-		<div class="modal-title"> <h2>INTERNSHIP MODAL</h2></div>
-
-		</div>
-
-	<div class="box-five box">
-    <div class="item-one">
-         <div class="numbers"> 05</div>
-	    <div class="category-menu">Exam</div>
-         <div class="more"> <a href="">+</a></div>
-        </div>
-	</div>
-	<div class="box-five-modal modal-screen hide">
-
-		<div class="modal-title"> <h2>EXAM MODAL</h2></div>
-
-		</div>
-
-	<div class="box-six box">
-    <div class="item-one">
-         <div class="numbers"> 06</div>
-	    <div class="category-menu">Final Project</div>
-	     <div class="more"> <a href="">+</a></div>
-        </div>
-	</div>
-	<div class="box-six-modal modal-screen hide">
-
-		<div class="modal-title"> <h2>FINAL PROJECT MODAL</h2></div>
-
-		</div>
+<a href="curriculum_in.html" class="page-navigation-arrow">&#10094;</a>
+<div class="page-navigation">
+<a href="curriculum_in.html" class="mainpage-title">MMD Curriclum</a>
+<a href="curriculum_in.html#slideshow" class="semester-title"><br>1st semester</a>
 </div>
+
+	<div class="panels">
+    <div class="panel panel1" onclick="hidePanelText();">
+     <div class="panel-box"><p class="numbers">1</p>
+	    <p class="category-menu">Skills</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-1 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel2" onclick="hidePanelText2();">
+     	<div class="panel-box"><p class="numbers">2</p>
+	    <p class="category-menu">Knowledge</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-2 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel3" onclick="hidePanelText3();">
+      <div class="panel-box"><p class="numbers">3</p>
+	    <p class="category-menu">Competences</p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-3 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel4" onclick="hidePanelText4();">
+     <div class="panel-box"><p class="numbers">4</p>
+	    <p class="category-menu">Internship </p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-4 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+    <div class="panel panel5" onclick="hidePanelText5();">
+      <div class="panel-box"><p class="numbers">5</p>
+	    <p class="category-menu">Exam </p>
+	    <p class="more-button">+</p>	</div>
+			<p class="panel-text paneltext-5 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+		 <div class="panel panel6" onclick="hidePanelText6();">
+      <div class="panel-box"><p class="numbers">6</p>
+	    <p class="category-menu">Final Project</p>
+	    <p class="more-button">+</p>	</div>
+			 <p class="panel-text paneltext-6 hide">Apply basic theories, methods and tools for managing simple multimedia productions of relevance to professional practices in the field. Plan and conduct user tests, including selection of the right user test for a given digital media production. Apply and document key processes in the design and development of digital media productions, and communicate the processes to stakeholders with professional insights. Apply basic theories, methods and tools to the design and development of user interfaces. Apply basic modelling and structuring methods in the development of digital user interfaces. Apply and assess basic technologies and development environments for the development of user interfaces, including methods and technologies for version controls.</p>
+    </div>
+  </div>
 <script src="script.js"></script>
 </body>
 </html>
